# mantid

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.json  .coderabbit.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .rstcheck.project.cfg  .style.yapf  0001-clang-format-PR17626-eb1cdbc.patch  0001-clang-format-PR17930-33058a9.patch  0001-clang-format-PR20066-284ac7d.patch  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCY_LICENSES.md  README.md  SECURITY.md  TEST-APITest.DetectorSearcherTest.xml  TEST-MDAlgorithmsTest.Integrate3DEventsTest.xml  V20_4-tubes_150deg_Definition_v01.xml  WEAK_PTR_ANALYSIS.md  WorkForHome  bash.exe.stackdump  conda-developer-osx.yml  fetch_Third_Party.sh  find.xml  mantid-developer-linux.yml  mantid-developer-osx.yml  mantid-developer-win.yml  packages.xml  patch  pixi.toml  pyproject.toml  q  (+3 more)
Code/Mantid/: .cproject  .project  CMakeLists.txt  ConvertInstrumentFile.cpp  Mantid-debug.props  Mantid-win32.props  Mantid-x64.props  Mantid.props  Mantid.sln  MantidBuild.py  MantidDebug.props  MantidRelease.props  MantidVS10.sln  SConscriptWin  SConstruct  build.bat  build.py  build.sh  checkin_except.py  class_maker.py  color_scons.py  monitorTests.py  release_version.py  runAllTests.py  svn_new_files.py
Framework/: CMakeLists.txt  trash.txt  trash_0.txt  trash_run_index.txt  trash_runindex.txt
Framework/API/: CMakeLists.txt
Framework/Algorithms/: CMakeLists.txt
Framework/Beamline/: CMakeLists.txt
Framework/Catalog/: CMakeLists.txt
Framework/Crystal/: CMakeLists.txt
Framework/CurveFitting/: CMakeLists.txt
Framework/DataHandling/: CMakeLists.txt
Framework/DataObjects/: CMakeLists.txt
Framework/Doxygen/: CMakeLists.txt  Mantid_template.doxyfile  make_header.py
Framework/Examples/: HelloWorldAlgorithm.cpp  HelloWorldAlgorithm.h  LorentzianTest.cpp  LorentzianTest.h  ModifyData.cpp  ModifyData.h  Muon_ExpDecayOscTest.cpp  Muon_ExpDecayOscTest.h  PropertyAlgorithm.cpp  PropertyAlgorithm.h  WorkspaceAlgorithm.cpp  WorkspaceAlgorithm.h
Framework/GPUAlgorithms/: CMakeLists.txt
Framework/Geometry/: CMakeLists.txt
Framework/HistogramData/: CMakeLists.txt
Framework/ICat/: CMakeLists.txt  README.md
Framework/ISISLiveData/: CMakeLists.txt
Framework/Indexing/: CMakeLists.txt
Framework/Json/: CMakeLists.txt
Framework/Kernel/: .gitignore  CMakeLists.txt
Framework/LegacyNexus/: CMakeLists.txt
Framework/LiveData/: CMakeLists.txt
Framework/MDAlgorithms/: CMakeLists.txt  rebinninginfoschema.h
Framework/MPI/: CMakeLists.txt
Framework/MPIAlgorithms/: CMakeLists.txt
Framework/MatlabAPI/: linkoptions.def
Framework/Muon/: CMakeLists.txt
Framework/Nexus/: CMakeLists.txt
Framework/NexusCpp/: CMakeLists.txt
Framework/NexusGeometry/: CMakeLists.txt
Framework/Parallel/: CMakeLists.txt
Framework/PostInstall/: CMakeLists.txt
Framework/Properties/: Mantid.properties.template  MantidTest.properties  MantidTest.user.properties  Readme.txt
Framework/PythonInterface/: .gitignore  CMakeLists.txt  setup.py  setup.py.in
Framework/Reflectometry/: CMakeLists.txt
Framework/RemoteAlgorithms/: CMakeLists.txt
Framework/RemoteJobManagers/: CMakeLists.txt
Framework/SINQ/: CMakeLists.txt
Framework/ScriptRepository/: CMakeLists.txt
Framework/TestHelpers/: CMakeLists.txt
Framework/Types/: CMakeLists.txt
Framework/UserAlgorithms/: ModifyData.cpp  Muon_ExpDecayOscTest.h  PropertyAlgorithm.h  SConstruct  WorkspaceAlgorithm.cpp
Framework/WorkflowAlgorithms/: CMakeLists.txt  PythonWorkflowAlgorithms_README.txt
MantidPlot/: CMakeLists.txt  FixBundle.cmake.in  FixMacportsBundle.cmake.in  FixMavericksBundle.cmake.in  MantidPlot.manifest  make_package.rb.in  mantid_qt_settings_editor.py  mantidplot.py  mantidplotrc.py  package_python_macports.py
MantidPlot/icons/: icons.qrc
MantidPlot/ipython_widget/: __init__.py  mantid_ipython_widget.py
MantidPlot/pymantidplot/: __init__.py  proxies.py  pyplot.py  qtiplot.py
MantidPlot/src/: ApplicationWindow.cpp  ApplicationWindow.h  ArrowMarker.cpp  ArrowMarker.h  AssociationsDialog.cpp  AssociationsDialog.h  AxesDialog.cpp  AxesDialog.h  AxisDetails.cpp  AxisDetails.h  Bar.cpp  Bar.h  BoxCurve.cpp  BoxCurve.h  CanvasPicker.cpp  CanvasPicker.h  ColorMapDialog.cpp  ColorMapDialog.h  Cone3D.cpp  Cone3D.h  ConfigDialog.cpp  ConfigDialog.h  ContourLinesEditor.cpp  ContourLinesEditor.h  Convolution.cpp  Convolution.h  Correlation.cpp  Correlation.h  CurveRangeDialog.cpp  CurveRangeDialog.h  CurvesDialog.cpp  CurvesDialog.h  CustomActionDialog.cpp  CustomActionDialog.h  DataPickerTool.cpp  DataPickerTool.h  DataSetDialog.cpp  DataSetDialog.h  Differentiation.cpp  Differentiation.h  (+251 more)
MantidPlot/test/: MantidPlot1DPlotTest.py  MantidPlot2DPlotTest.py  MantidPlotAlgorithmDialogTest.py  MantidPlotFoldersTest.py  MantidPlotInputArgsCheck.py  MantidPlotInstrumentViewTest.py  MantidPlotMatplotlibTest.py  MantidPlotMdiSubWindowTest.py  MantidPlotPVPythonTest.py  MantidPlotProjectRecovery.py  MantidPlotProjectSerialiseTest.py  MantidPlotProxiesTest.py  MantidPlotPyplotGeneralTest.py  (+5 more)
docs/: CMakeLists.txt  README.md  conf.py.in  runsphinx.py.in
qt/: CMakeLists.txt
scripts/: .gitignore  BatchWidgetInterface.py  BilbyCustomFunctions_Reduction.py  BilbyReductionScript.py  CMakeLists.txt  DGSPlanner.py  DGS_Reduction.py  DNS_Reduction.py  DRILL.py  DataProcessorInterface.py  Drill.py  Elemental_Analysis.py  Elemental_Analysis_2.py  Elemental_Analysis_old.py  Engineering_Diffraction.py  Engineering_Diffraction_2.py  FDAG.py  FFTPresenterTest.py  FilterEvents.py  Frequency_Domain_Analysis.py  Frequency_Domain_Analysis_2.py  Frequency_Domain_Analysis_Old.py  HFIR_4Circle_Reduction.py  HFIR_Powder_Diffraction_Reduction.py  ISIS_Reflectometry.py  ISIS_Reflectometry_Old.py  ISIS_SANS.py  ISIS_SANS_v2_experimental.py  MPLwidgets.py  MSlice.py  Muon_Analysis.py  Muon_Analysis_2.py  ORNL_SANS.py  Poldi.py  Powder_Diffraction_Reduction.py  PyChop.py  QECoverage.py  REFL_Reduction.py  REFL_SF_Calculator.py  REFM_Reduction.py  (+15 more)
(+50595 files in other folders)
